--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,7 +48,7 @@ html {
 }
 
 body {
-  background-image: url("/bg.png");
+  background-image: url("/bg.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
