--- a/src/app/ReactBits/ShinyText/ShinyText.css
+++ b/src/app/ReactBits/ShinyText/ShinyText.css
@@ -3,7 +3,7 @@
   background: linear-gradient(
     120deg,
     rgba(255, 255, 255, 0) 40%,
-    rgb(255, 145, 2) 50%,
+    #ff9102 50%,
     rgba(255, 255, 255, 0) 60%
   );
   background-size: 200% 100%;
